# my-1st-WebSocket-fastapi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: readme-chapter.md
01_echo/: README.md
02_chat/: README.md  main.py
03_reconnect/: README.md  main.py
04_ping_pong/: README.md  main.py
05_iter/: README.md  main.py
06_origin/: README.md  main.py
07_auth_query/: README.md  main.py
08_auth_cookie/: README.md  main.py
09_rooms/: README.md  main.py
10_json/: README.md  main.py
11_nextjs/: README.md  main.py
12_react_patterns/: README.md  main.py
12_react_patterns/frontend/: package-lock.json
13_ping_pong/: README.md  main.py
14_reconnect/: README.md
15_5_jwt/: README.md  main.py
15_5_jwt/frontend/: package.json
15_channels/: README.md  main.py
16_jwt_auth/: README.md  main.py
17_exception_handling/: README.md  main.py
18_zombie_fix/: README.md  main.py
19_refactoring/: README.md
20_db_persistence/: README.md  docker-compose.yml
20_db_persistence/backend/: init_db.py
21_k8s/: README.md
21_k8s/backend/: requirements.txt
21_k8s/frontend/: package-lock.json
21_k8s/k8s/: backend.yaml
22_pubsub/: README.md
22_pubsub/k8s/: backend.yaml
23_redis_resilience/: README.md  REDIS.md  package-lock.json
24_redis_streams/: README.md  REDIS.md
25_message_sync/: README.md
25_message_sync/backend/: requirements.txt
26_polling_sync/: README.md
26_polling_sync/backend/: Dockerfile
27_pubsub_resilient/: README.md
30_pubsub_ddd/: README.md  docker-compose.yml
(+83 files in other folders)
