[project]
name = "my-1st-websocket"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "websocket (>=0.2.1,<0.3.0)",
    "PyJWT (>=2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["annotation-unchecked"]
